# cpp2

./: CMakeLists.txt  README
.cache/clangd/index/: Pin.cpp.65B5C2D57205F025.idx  Pin.h.6C92FD3B56DB0B04.idx  aiPlayer.cpp.5F7DE9B339E65187.idx  aiPlayer.h.BFCC92633DC671A9.idx  card.cpp.C1578F4EFA491935.idx  card.h.E9069B24BE8D1171.idx  main.cpp.3A50FF91DE52AA8E.idx
cppProjects/: Makefile  Pin.cpp  Pin.h  a.out  card.h  game  main.cpp  main2.cpp
networkTest/: a.out  app.py  client  clientTesting.cpp  server  serverTesting.cpp
networkTest/instance/: users.db
networkTest/myenv/: pyvenv.cfg
networkTest/static/: script.js
networkTest/templates/: index.html
src/: Pin.cpp  Pin.h  Pin2.cpp  Pin2.h  aiPlayer.cpp  aiPlayer.h  card.cpp  main.cpp
